#1: add put/post product info api; #2: import validate
